general fix for about page overflow

--- a/index.css
+++ b/index.css
@@ -87,6 +87,7 @@ body {
     box-shadow: 0px 0px 15px 0px rgba(25, 25, 25, 0.75);
     z-index: 1000;
     margin-bottom: 100px;
+    overflow-y: scroll;
 
 }
 
